kubernetes/apps/overlays/local/whoami/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whoami
  labels:
    app.kubernetes.io/name: whoami
